# monorepo

./: .gitignore  README.md  package-lock.json
apps/cosmos-llm-ruby-demo-hello/: .envrc  .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  cosmos-llm-ruby-demo-hello.gemspec
apps/cosmos-llm-ruby-demo-hello/exe/: durable-llm-hello
apps/cosmos-llm-ruby-demo-hello/lib/: durable_llm_hello.rb
apps/cosmos-llm-ruby-demo-hello/lib/cosmos_llm_hello/: chat_session.rb  cli.rb  error.rb  version.rb
apps/cosmos-llm-ruby-demo-hello/test/: test_chat_session.rb  test_cli.rb  test_helper.rb
apps/cosmos-llm-ruby-demo-markdowner/: .rubocop.yml  CHANGELOG.md  Gemfile  Rakefile  cosmos-llm-ruby-demo-markdowner.gemspec  devenv.nix
apps/cosmos-llm-ruby-demo-markdowner/coverage/: .resultset.json  index.html
apps/cosmos-llm-ruby-demo-markdowner/exe/: durable-llm-markdowner
apps/cosmos-llm-ruby-demo-markdowner/lib/: durable_llm_markdowner.rb
apps/cosmos-llm-ruby-demo-markdowner/lib/cosmos_llm_markdowner/: agent_session.rb  cli.rb  error.rb  sandbox.rb  tools.rb  version.rb
apps/cosmos-llm-ruby-demo-markdowner/test/: test_agent_session.rb  test_cli.rb  test_sandbox.rb
ci/: test-all
docs/: ARCHITECTURE.md
lib/js/cosmos-llm-js-client/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
lib/js/cosmos-llm-js-client/examples/: anthropic.ts  fluent-api.ts  simple-completion.ts  streaming.ts
lib/js/cosmos-llm-js-client/src/: client.test.ts  client.ts  configuration.test.ts  configuration.ts  errors.test.ts  errors.ts  http-client.test.ts  http-client.ts  index.test.ts  index.ts  test-setup.ts
lib/ruby/: README.md
lib/ruby/cosmos-llm-ruby-client/: CLI.md  CONFIGURE.md  README.md  cosmos-llm.gemspec
lib/ruby/cosmos-llm-ruby-client/enterprise/: GET_ENTERPRISE.md
lib/ruby/cosmos-llm-ruby-context/: .rubocop.yml  CHANGELOG.md  Gemfile  README.md  SECURITY.md  cosmos-llm-context.gemspec
lib/ruby/cosmos-llm-ruby-tool/: CHECKLIST.md  Gemfile  cosmos-llm-tool.gemspec
lib/ruby/cosmos-llm-ruby-tool-preset/: Gemfile  cosmos-llm-tool-preset.gemspec
lib/ruby/cosmos-llm-ruby-virtual-filesystem/: .gitignore  Gemfile  cosmos-llm-virtual-filesystem.gemspec
lib/rust/: README.md
lib/rust/cosmos-llm-rust/: CHANGELOG.md  CHECKLIST.md  Cargo.toml  README.md  devenv.nix
lib/rust/cosmos-llm-rust-context/: Cargo.toml  devenv.nix
lib/rust/cosmos-llm-rust-context/src/: block.rs  builder.rs  error.rs  lib.rs  renderers.rs
lib/rust/cosmos-llm-rust-tool/: Cargo.toml  devenv.nix
lib/rust/cosmos-llm-rust-tool/src/: definition.rs  error.rs  executor.rs  lib.rs  parameter.rs  registry.rs  schemas.rs
lib/rust/cosmos-llm-rust-tool/src/preset/: glob.rs  grep.rs  list.rs  mod.rs  read.rs  webfetch.rs  write.rs
lib/rust/cosmos-llm-rust-virtual-filesystem/: Cargo.toml  devenv.nix
lib/rust/cosmos-llm-rust-virtual-filesystem/src/: error.rs  filesystem.rs  lib.rs
lib/rust/cosmos-llm-rust/.cargo/: config.toml
lib/rust/cosmos-llm-rust/examples/: basic.rs
lib/rust/cosmos-llm-rust/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
lib/rust/cosmos-llm-rust/src/providers/: anthropic.rs  mod.rs  openai.rs
lib/rust/cosmos-llm-rust/tests/: integration.rs
(+140 files in other folders)
