[package]
name = "cosmos-llm-context"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "DSL for building structured agentic LLM contexts"
license = "MIT"
repository = "https://github.com/durableprogramming/cosmos-llm-rust"
documentation = "https://docs.rs/cosmos-llm-context"
readme = "README.md"
keywords = ["llm", "ai", "context", "prompt", "agent"]
categories = ["api-bindings"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cosmos-llm-virtual-filesystem = { path = "../cosmos-llm-rust-virtual-filesystem" }

[dev-dependencies]
