[package]
name = "cosmos-llm-tool"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Function-calling layer and preset tools for LLM agents"
license = "MIT"
repository = "https://github.com/durableprogramming/cosmos-llm-rust"
documentation = "https://docs.rs/cosmos-llm-tool"
readme = "README.md"
keywords = ["llm", "ai", "tool", "function-calling", "agent"]
categories = ["api-bindings"]

[features]
webfetch = ["dep:reqwest", "dep:tokio"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
cosmos-llm-virtual-filesystem = { path = "../cosmos-llm-rust-virtual-filesystem" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
