[package]
name = "cosmos-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Unified client for multiple LLM providers (OpenAI, Anthropic, and more)"
license = "MIT"
repository = "https://github.com/durableprogramming/cosmos-llm-rust"
documentation = "https://docs.rs/cosmos-llm"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "nlp"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-test = "0.4"
mockito = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
